# AdvancedWearables

./: .gitignore  README.md  data_aquisition_format.py
nrf52840_dongle_ble_peripheral_acc/: CMakeLists.txt  Kconfig  nrf52840dongle_nrf52840.overlay  prj.conf
nrf52840_dongle_ble_peripheral_acc/src/: acc_service.c  acc_service.h  main.c
nrf5340_dk_ble_central_acc/: CMakeLists.txt  build.sh  prj.conf
nrf5340_dk_ble_central_acc/src/: ble_central.c  ble_central.h  calibri_18.c  display.c  display.h  main.c  message.h  sd.c  sd.h
nrf5340_dk_ble_central_inf/: CMakeLists.txt  build.sh  prj.conf
nrf5340_dk_ble_central_inf/model-parameters/: model_metadata.h
nrf5340_dk_ble_central_inf/src/: ble_central.c  ble_central.h  display.cpp  display.h  main.cpp  sd.cpp  sd.h
nrf5340_dk_ble_central_inf/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
raw_data/: Running.14.csv  Running.15.csv  Running.8.csv  Running.9.csv  Sitting_Bad.2.csv  Sitting_Bad.20.csv  Sitting_Bad.21.csv  Sitting_Bad.22.csv  Sitting_Bad.23.csv  Sitting_Bad.24.csv  Sitting_Bad.3.csv  Sitting_Bad.30.csv  Sitting_Bad.31.csv  Sitting_Bad.34.csv  Sitting_Bad.4.csv  Sitting_Good.1.csv  Sitting_Good.18.csv  Sitting_Good.19.csv  Sitting_Good.25.csv  Sitting_Good.26.csv  Sitting_Good.27.csv  Sitting_Good.28.csv  Sitting_Good.32.csv  Sitting_Good.33.csv  Sitting_Good.5.csv  Walking.10.csv  Walking.11.csv  Walking.12.csv  Walking.13.csv  Walking.16.csv  Walking.17.csv  Walking.29.csv  Walking.6.csv  Walking.7.csv
